build: add native access JVM option to Dockerfile.